# pointing-devices-kcm

./: CMakeLists.txt
kcm/: CMakeLists.txt  devicelistmodel.cpp  devicelistmodel.h  deviceproperty.cpp  deviceproperty.h  devicepropertybinding.cpp  devicepropertybinding.h  devicesettings.cpp  devicesettings.h  kcm.cpp  kcm.h  kcm_pointingdevices.desktop  pointing-devices-kcm.desktop
kcm/package/: metadata.desktop
kcm/package/contents/ui/: AttachedLabel.qml  CheckboxEditor.qml  ComboboxEditor.qml  DependentProperty.qml  DeviceListView.qml  DevicePage.qml  DeviceSettings.qml  DeviceSettingsUI.qml  EvdevSettings.qml  IconWithLabel.qml  LibInputEnableDisable.qml  LibInputFlag.qml  LibInputIndex.qml  LibInputSettings.qml  ListItemProperty.qml  PageListDelegate.qml  RadioButtonEditor.qml  SimpleProperty.qml  SliderEditor.qml  SynapticsBasicTab.qml  SynapticsSettings.qml  XInputAccel.qml  XInputAcceleration.qml  main.qml
kded/: CMakeLists.txt  kded.cpp  kded.h  kded_pointingdevices.desktop
kded/test/: CMakeLists.txt  standalone.cpp  test_kded.cpp
lib/: CMakeLists.txt  device.cpp  device.h  devicemanager.cpp  devicemanager.h  log.cpp  log.h
lib/kwin_wayland/: CMakeLists.txt  kwindevice.cpp  kwindevice.h  kwindevicemanager.cpp  kwindevicemanager.h  kwinproperty.cpp  kwinproperty.h
lib/test/: CMakeLists.txt  test_devicemanager.cpp
lib/x11/: CMakeLists.txt  xcbatomcache.cpp  xcbatomcache.h  xcbconnection.h  xcbobject.h  xinputdevice.cpp  xinputdevice.h  xinputdeviceadapter.cpp  xinputdeviceadapter.h  xinputdevicemanager.cpp  xinputdevicemanager.h  xinputdevicemanageradapter.cpp  xinputdevicemanageradapter.h
lib/x11/test/: CMakeLists.txt  config.h.in  eventmonitor.cpp  test_adapters.cpp  test_xcbatomcache.cpp  test_xinputdevicemanager.cpp  xvfb.h
